Limpeza de arquivos nao necessarios para o projeto

--- a/front-end/src/assets/sass/components/_all-pages.scss
+++ b/front-end/src/assets/sass/components/_all-pages.scss
@@ -1,7 +1,7 @@
 .paper {
   padding: 16px !important;
   text-align: center !important;
-  color: $cor-secundaria !important;
+  // color: $cor-secundaria !important;
   // border: 1px solid $cor-primaria !important
 }
 
