--- a/front-end/src/assets/sass/style.scss
+++ b/front-end/src/assets/sass/style.scss
@@ -7,19 +7,11 @@
 @import "base/_fontes";
 
 // Layout
-@import "layout/_container";
 
 // Componentes
-// @import 'components/_avatar';
 @import "components/_botao";
-// @import "components/_cards-dashboard";
-// @import "components/_formulario";
-// @import "components/_pagina-cabecalho";
-// @import "components/_pagina-conteudo";
-// @import "components/_document-editor";
+@import "components/_table";
 
 @import "components/_all-pages";
 
 // Páginas
-
-// Vendor
