--- a/front-end/src/assets/sass/components/_botao.scss
+++ b/front-end/src/assets/sass/components/_botao.scss
@@ -29,18 +29,6 @@
     background-color: $cor-secundaria-t-v !important;
   }
 
-  &__primario {
-    margin-right: 2% !important;
-    margin-bottom: 5px !important;
-    background-color: $cor-primaria !important;
-    color: #fff !important;
-    @media (min-width: $breakpoint-lg) {
-      margin-bottom: 0 !important;
-    }
-  }
-  &__primario:hover {
-    background-color: $cor-secundaria !important;
-  }
   &__editar {
     margin-right: 2% !important;
     margin-bottom: 5px !important;
@@ -65,45 +53,12 @@
   &__excluir:hover {
     background-color: $cor-secundaria-t-v !important;
   }
-  &__confirm {
-    margin-right: 2% !important;
-    margin-bottom: 5px !important;
-    background-color: $cor-primaria-t-g !important;
+
+  &__adicionar {
+    background-color: $cor-primaria !important;
     color: #fff !important;
-    @media (min-width: $breakpoint-lg) {
-      margin-bottom: 0 !important;
-    }
   }
-  &__confirm:hover {
-    background-color: $cor-secundaria-t-g !important;
+  &__adicionar:hover {
+    background-color: $cor-secundaria !important;
   }
-}
-
-.botao-adicionar {
-  background-color: $cor-primaria !important;
-  color: #fff !important;
-  &__curso {
-    width: 100% !important;
-    @media (min-width: $breakpoint-md) {
-      width: 25% !important;
-    }
-  }
-}
-.botao-adicionar:hover {
-  background-color: $cor-secundaria !important;
-}
-
-.botao-voltar {
-  background-color: $cor-primaria-t-v !important;
-  color: #fff !important;
-  margin-left: 10px !important;
-  &__curso {
-    width: 100% !important;
-    @media (min-width: $breakpoint-md) {
-      width: 25% !important;
-    }
-  }
-}
-.botao-voltar:hover {
-  background-color: $cor-secundaria-t-v !important;
 }
