Melhorias no código

--- a/front-end/src/assets/sass/abstracts/_cores.scss
+++ b/front-end/src/assets/sass/abstracts/_cores.scss
@@ -1,7 +1,7 @@
 $cor-primaria: #009edb;
 $cor-secundaria: #60c2e9;
 
-$cor-primaria-t-v: #ff2020;
+$cor-primaria-t-v: #f22;
 $cor-secundaria-t-v: #ff91a5;
 
 $cor-primaria-t-a: #ffa320;
