--- a/front-end/src/assets/sass/components/_table.scss
+++ b/front-end/src/assets/sass/components/_table.scss
@@ -1,5 +1,6 @@
 .tableEllipsis {
   white-space: nowrap;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   width: 200px;
   display: block;
