--- a/front-end/src/assets/sass/style.scss
+++ b/front-end/src/assets/sass/style.scss
@@ -12,6 +12,5 @@
 @import "components/_botao";
 @import "components/_table";
 
-@import "components/_all-pages";
-
 // Páginas
+@import "pages/_all-pages";
